default to UTC time

--- a/scilogger/scilogger.ini
+++ b/scilogger/scilogger.ini
@@ -28,10 +28,10 @@ LEVEL_DEFAULT = DEBUG
 EXCEPTION_TRACE = true
 
 # use (or not) UTC times for the timestamp
-TIMESTAMP_UTC = false
+TIMESTAMP_UTC = true
 
 # formatting instructions for the timestamp (datetime/strftime format)
-TIMESTAMP_FMT = %m/%d/%Y|%H:%M:%S
+TIMESTAMP_FMT = %Y-%m-%dT%H:%M:%SZ
 
 # formatting instructions for the duration (string format)
 #   - days: number of elapsed days (integer)
