--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ version_scheme = "guess-next-dev"
 [project]
 name = "scilogger"
 description = "SciLogger - Logging for Scientific Applications"
-license = {text = "BSD-2-Clause"}
+license = "BSD-2-Clause"
+license-files = ["LICENSE.txt"]
 authors = [{name = "Thomas Guillod", email = "guillod@otvam.ch"}]
 maintainers = [{name = "Thomas Guillod", email = "guillod@otvam.ch"}]
 keywords = [
@@ -29,7 +30,6 @@ keywords = [
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
-    "License :: OSI Approved :: BSD License",
     "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
@@ -57,7 +57,6 @@ content-type = "text/markdown"
 
 [tool.setuptools]
 packages = ["scilogger"]
-license-files = ["LICENSE.txt"]
 include-package-data = true
 
 [tool.setuptools.package-data]
